Fix positioning of news area to aligning with edge of other sliders

--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -20,6 +20,11 @@
 
 .news-feed {
   background-color: white;
+  margin-left: 3%;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 63.666667%;
+  flex: 0 0 63.666667%;
+  max-width: 63.666667%;
 }
 
 .grey-bg {
@@ -43,4 +48,8 @@
   margin-right: -15px;
   max-height: 485px;
   overflow-y: scroll;
+}
+
+.yt-button {
+  margin-left: 15px;
 }
